1.7.5: Fix for October V2. Thanks @shiftaltd. Possible fix for Editor JS in ML Static Pages

--- a/formwidgets/editorjs/assets/css/editor.css
+++ b/formwidgets/editorjs/assets/css/editor.css
@@ -10,6 +10,7 @@
     padding: 20px 0;
 }
 
+.field-multilingual-editorjs,
 .editorjs-wrapper,
 .editorjs-wrapper .codex-editor,
 .editorjs-wrapper .codex-editor .codex-editor__redactor{
